[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/Meteor.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/Meteor/Meteor.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/explosion_sound.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/hit-sound.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "damage"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Meteor" type="Area2D" groups=[
"damageable",
]]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
minSpeed = 50.0
maxSpeed = 80.0
minRotationRate = -20.0
maxRotationRate = 20.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -19.7298, -91.966, -35.2862, -78.8845, -39.5288, -70.0457, -61.4492, -54.1358, -83.0159, -23.7302, -74.8842, 32.8383, -65.6918, 60.7691, -58.9743, 70.6686, -44.8321, 79.5074, -21.4976, 85.1642, -7.35547, 78.0932, 3.60468, 91.5282, 20.5752, 98.5993, 36.4852, 94.0031, 48.8595, 86.5785, 62.2945, 72.4363, 68.6585, 59.3549, 84.922, 6.32183, 72.9012, -7.1132, 67.2443, -22.6695, 69.0121, -34.3368, 74.6689, -44.9434, 58.0519, -59.4391, 38.96, -78.1774, 34.0103, -86.6627, 21.2823, -89.1376, 14.5648, -97.2693, 9.61508, -97.6229, 4.31178, -92.6731, -5.23416, -84.5414, -12.3052, -85.6021 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.668167, -0.22273 )
scale = Vector2( 9.15477, 10.6705 )

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 20.0

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Meteor_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Meteor_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="ExplosionSound" to="." method="_on_ExplosionSound_finished"]
